--- a/downloads/4f8d2a3d6c/download.html
+++ b/downloads/4f8d2a3d6c/download.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
+    <link rel="stylesheet" href="../../style.css">
     <title>Thank You!</title>
 </head>
 <body>
-    <h1>Thank you for your payment</h1>
-    <p>Your file is ready to download:</p>
-    <a href="digital-hygiene.pdf" download>Download</a>
+    <section>
+        <h1>Thank you for your payment!</h1>
+        <p>Your file is ready to download:</p>
+        <a href="digital-hygiene.pdf" download>Download</a>
+    </section>
 </body>
 </html>
